@@ -3,6 +3,7 @@ now with 1-5 priority ratings
 
 always:
 2  -  better documentation (particularly online articles)
+5  -  switch to asciidoc?
 
 core:
 5 -  "check" should check if services (esp httpd) are started
